Always display vertical scrollbar to stop layout jumping around when loading

--- a/css/style.less
+++ b/css/style.less
@@ -65,6 +65,8 @@ em,i{font-style:italic}
 ul,ol,li{padding:0;margin:0;list-style:none;}
 strong,b{font-weight:bold}
 
+html { overflow-y: scroll; }
+
 /* ---- generic declarations ---- */
 
 body {
